# bongo

./: CHANGELOG.md  Cargo.toml  LICENSE  build.rs
.github/: release-drafter.yml
.github/workflows/: commitlinter.yaml  pr-title-linter.yaml  release.yaml
resources/: config.kdl
resources/modules/: test.rn
resources/pages/: 404.html  index.html
resources/public/: styles.css
src/: config.rs  logs.rs  main.rs  modules.rs  routes.rs  utils.rs
src/modules/: macros.rs  mod.rs  types.rs  utils.rs
src/services/: mod.rs  routes.rs
