[package]
name = "bongo"
edition = "2024"
build = "build.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
knus = "3.3"

[build-dependencies]
copy_to_output = "2.2"
glob = "0.3"