[package]
name = "bongo"
edition = "2024"
build = "build.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
knus = "3.3"
miette = { version = "7.6", features = ["fancy"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["full"] }
tower = "0.5"
rune = { version = "0.14" }
futures = "0.3"

[build-dependencies]
copy-glob = "0.1"